maze.wallfollower.WallFollowerMaze.scala.error
Erreur de compilation :
WallFollowerMaze:1: error: Missing closing brace `}' assumed here
override def run() {
^WallFollowerMaze:1: error: expected start of definition
override def run() {
         ^WallFollowerMaze:8: error: expected class or object definition
def keepHandOnSideWall(){
^