maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(!estSurBiscuit()){
    keepHandOnSideWall()
  }
  prendBiscuit()
}

def keepHandOnSideWall(){
  droite()
  if(estFaceMur()){
    gauche()
    if(!estFaceMur()){
      avance()
    }else{
      gauche()
      if(!estFaceMur()){
      avance()
    }
  }
}